// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppTable getStatusStyles handles all status values 1`] = `
{
  "bgcolor": "#ffffff",
  "border": "1px solid #2E7D32",
  "color": "#2E7D32",
}
`;

exports[`AppTable getStatusStyles handles all status values 2`] = `
{
  "bgcolor": "#EAB54E",
  "color": "black",
}
`;

exports[`AppTable getStatusStyles handles all status values 3`] = `
{
  "bgcolor": "#F5F5F5",
  "color": "black",
}
`;
